welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: ';' expected but '=' found.
		gauche(); compteur=0 =; avance();
                                     ^Poucet:18: error: illegal start of simple expression
	while (!sortieTrouvee());
                                ^Poucet:26: error: 'while' expected but '}' found.
}
^